# olsn

./: Compiled and Labelled - Sheet1 Numeric.csv  Compiled and Labelled - Sheet1.csv  Gail Middle Finger Tap.xlsx  ModelTraining.py  README.md  RF_emg_model.py  ZBS_Data_Compiled_and_Labelled.csv  Zavid_Model.py  cnn_emg_model.py  datalabel.py  live plotting 8 channel.py  myo.py  myo_emg_data.csv  svm_emg_model.py  tempCodeRunnerFile.py  test.ino  testingbayes.py  testinggrdsearch.py  zbs_2sec2fingpinch.csv  zbs_2secfist.csv
MyoInterface/: 3.4.3  README.md  req.txt  setup.py
MyoInterface/MyoInterface.egg-info/: SOURCES.txt  top_level.txt
MyoInterface/script/: IanPlotting.py  MonitorEEGQt.py  plotting_utility.py  print_emg.py  real_time_plotting.py  record_emg.py
MyoInterface/src/MyoInterface/: MyoInterface.py  command_codes.py
MyoInterface/src/MyoInterface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
OLSN_testbed/: OLSN_testbed.ino
OLSN_testbed/OLSN_testbed_PID/: OLSN_testbed_PID.ino
OLSN_testbed/motor_control_4x/: motor_control_4x.ino
OLSN_testbed_PID/: OLSN_testbed_PID.ino
dl-myo/: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
dl-myo/examples/: file_name4.csv  live_classifying.py  sample_client.py  ws_client.py  ws_server.py
dl-myo/examples/influxdb/: influx_client.py
dl-myo/examples/influxdb/config/: influx-configs
dl-myo/examples/model_03_21_2024/: gradient_boosted_trees_header.pb  header.pb
dl-myo/examples/myo/: __init__.py  core.py  profile.py  types.py
dl-myo/myo/: commands.py  constants.py  core.py
dl-myo/tests/test_myo/: test_types.py
old/: Compiled and Labelled - Sheet1.csv  Gail Extension.xlsx  Gail Fist.xlsx  Gail Rest.xlsx  Ian_Static_Data_v2.csv  ModelTraining.py  README.md  TESTING_TESTING_BAYES.py  Zavid_Model.py  live plotting 8 channel.py  model_weights.keras  test.ino  testingbayes.py  zbs_2sec1fingpinch.csv  zbs_2secextension.csv  zbs_rest.csv
old/MyoInterface/: 3.4.3  README.md  req.txt  setup.py
old/MyoInterface/MyoInterface.egg-info/: SOURCES.txt  top_level.txt
old/MyoInterface/script/: IanPlotting.py  MonitorEEGQt.py  plotting_utility.py  print_emg.py  real_time_plotting.py  record_emg.py
old/MyoInterface/src/MyoInterface/: MyoInterface.py  command_codes.py
old/MyoInterface/src/MyoInterface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
old/dl-myo/: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
old/dl-myo/examples/: live_classifying.py  model.pkl  sample_client.py  ws_client.py  ws_server.py
old/dl-myo/examples/influxdb/: influx_client.py  myo.json
old/dl-myo/examples/influxdb/config/: influx-configs
old/dl-myo/examples/model_03_21_2024/: data_spec.pb  nodes-00000-of-00001
old/dl-myo/examples/myo/: __init__.py  constants.py  core.py  profile.py
old/dl-myo/myo/: commands.py  core.py  types.py
old/dl-myo/tests/test_myo/: test_types.py
